[ui] - create loading page 2

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">airplane-android</string>
+    <string name="company">AirlineCompany</string>
 </resources>
